infra/k8s/auth-depl-serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1    
  selector:
    matchLabels:
      app:  auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: us.gcr.io/ticketing-dev-404114/ticketing-auth    # Same as skaffold.yaml file
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000          # Port for the Service to run - will redirect the traffic to targetPort can be same as targetPort
      targetPort: 3000    # Actual Port that is listening to incoming traffic in the Pod
