infra/k8s/tickets-depl-serv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: us.gcr.io/ticketing-dev-404114/ticketing-tickets # Same as skaffold.yaml file
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000 # Port for the Service to run - will redirect the traffic to targetPort can be same as targetPort
      targetPort: 3000 # Actual Port that is listening to incoming traffic in the Pod
